drupal.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: drupal-service
spec: 
  ports: 
    - 
      name: http
      port: 80
      protocol: TCP
  selector: 
    app: drupal
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: drupal
  name: drupal
spec:
  selector:
    matchLabels:
      app: drupal
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: drupal
    spec: 
      containers: 
        - 
          image: drupal:9.3
          name: drupal
          ports: 
            - 
              containerPort: 80
          volumeMounts:
          - mountPath: /var/www/html/modules
            name: vol-drupal
            subPath: modules
          - mountPath: /var/www/html/profiles
            name: vol-drupal
            subPath: profiles
          - mountPath: /var/www/html/sites
            name: vol-drupal
            subPath: sites
          - mountPath: /var/www/html/themes
            name: vol-drupal
            subPath: themes
      volumes:
        - 
          name: vol-drupal
          persistentVolumeClaim: 
            claimName: drupal-pvc
